--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    "source": [
     "\n",
     "names_and_ranks =[] # make sure the list is empty\n",
-    " \n"
+    " Your task is to assign the variable names_and_ranks to a list, with each element equal to the city name and it's corresponding rank. For example, the first element would be, \"1. Buenos Aires\" and the second would be \"2. Toronto\". Use a for loop and the lists city_indices and city_names to accomplish this.\n"
    ]
   },
   {
