Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    ],
    "source": [
     "\n",
-    "names_and_ranks =[] # make sure the list is emaccomplish this.\n"
+    "names_and_ranks =[] # make sure the list is empty\n"
    ]
   },
   {
