--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
    ],
    "source": [
     "\n",
-    "names_and_ranks =[] # make sure the list is empty\n"
+    "names_and_ranks =[] # make sure the list is empty\n",
+    "\n"
    ]
   },
   {
