Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,11 @@
    "source": [
     "\n",
     "names_and_ranks =[] # make sure the list is empty\n",
-    "\n"
+    "i = 0\n",
+    "for index in city_indices: \n",
+    "    i +=1\n",
+    "    names_and_ranks.append(f'{i}. {city_names[index]}')\n",
+    "    \n"
    ]
   },
   {
