Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,8 +226,8 @@
     "names_and_ranks =[] # make sure the list is empty\n",
     "rank = 0\n",
     "for index in city_indices: \n",
-    "     +=1\n",
-    "    names_and_ranks.append(f'{i}. {city_names[index]}')\n",
+    "    rank +=1\n",
+    "    names_and_ranks.append(f'{rank}. {city_names[index]}')\n",
     "    \n"
    ]
   },
