--- a/index.ipynb
+++ b/index.ipynb
@@ -225,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12, 'Iguazu Falls')"
+       "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
