Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,8 @@
     "for index in city_indices: \n",
     "    rank +=1\n",
     "    names_and_ranks.append(f'{rank}. {city_names[index]}')\n",
-    "    \n"
+    "    \n",
+    "names_"
    ]
   },
   {
