--- a/index.ipynb
+++ b/index.ipynb
@@ -210,9 +210,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1. Buenos Aires',\n",
+       " '2. Toronto',\n",
+       " '3. Pyeongchang',\n",
+       " '4. Marakesh',\n",
+       " '5. Albuquerque',\n",
+       " '6. Los Cabos',\n",
+       " '7. Greenville',\n",
+       " '8. Archipelago Sea',\n",
+       " '9. Walla Walla Valley',\n",
+       " '10. Salina Island',\n",
+       " '11. Solta',\n",
+       " '12. Iguazu Falls']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "names_and_ranks =[] # make sure the list is empty\n",
@@ -221,7 +243,7 @@
     "    rank +=1\n",
     "    names_and_ranks.append(f'{rank}. {city_names[index]}')\n",
     "    \n",
-    "names_"
+    "names_and_ranks"
    ]
   },
   {
