--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,8 @@
    },
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "\n"
    ]
   },
   {
