--- a/index.ipynb
+++ b/index.ipynb
@@ -284,6 +284,11 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
+    "city_populations = []\n",
+    "i = 0\n",
+    "for city in cities:\n",
+    "    i+=1\n",
+    "    city_populations.append(cities[i-1]['Population'])\n",
     "\n"
    ]
   },
