Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        " '12. Iguazu Falls']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,8 +240,8 @@
     "names_and_ranks =[] # make sure the list is empty\n",
     "i = 0\n",
     "for index in city_indices: \n",
-    "    i +=1\n",
-    "    names_and_ranks.append(f'{rank}. {city_names[index]}')\n",
+    "    i += 1\n",
+    "    names_and_ranks.append(f'{i}. {city_names[index]}')\n",
     "    \n",
     "names_and_ranks"
    ]
