--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,9 @@
     "i = 0\n",
     "for city in cities:\n",
     "    i+=1\n",
-    "    city_populations.append(cities[i-1]['Population'])"
+    "    city_populations.append(cities[i-1]['Population'])\n",
+    "    \n",
+    "cit    "
    ]
   },
   {
