--- a/index.ipynb
+++ b/index.ipynb
@@ -277,11 +277,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2891000,\n",
+       " 2800000,\n",
+       " 2581000,\n",
+       " 928850,\n",
+       " 559277,\n",
+       " 287651,\n",
+       " 84554,\n",
+       " 60000,\n",
+       " 32237,\n",
+       " 4000,\n",
+       " 1700,\n",
+       " 0]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_populations = []\n",
     "i = 0\n",
@@ -289,7 +309,7 @@
     "    i+=1\n",
     "    city_populations.append(cities[i-1]['Population'])\n",
     "    \n",
-    "cit    "
+    "city_populations    "
    ]
   },
   {
