Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,8 @@
    "source": [
     "city_areas = []\n",
     "i = 0\n",
-    "for city in cities:"
+    "for city in cities:\n",
+    "    i +="
    ]
   },
   {
