--- a/index.ipynb
+++ b/index.ipynb
@@ -451,7 +451,8 @@
     "city_areas = []\n",
     "i = 0\n",
     "for city in cities:\n",
-    "    i +="
+    "    i += 1\n",
+    "    city_areas.append()"
    ]
   },
   {
