Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -452,7 +452,9 @@
     "i = 0\n",
     "for city in cities:\n",
     "    i += 1\n",
-    "    city_areas.append(cities[i-1]['Area'])"
+    "    city_areas.append(cities[i-1]['Area'])\n",
+    "    \n",
+    "ci    "
    ]
   },
   {
